--- a/layout.yaml
+++ b/layout.yaml
@@ -1,7 +1,7 @@
 # hotkey to start the vgs script
 hotkey_start: v
 # hotkey to cancel the vgs script/restore other controls at any time
-hotkey_cancel: ESCAPE
+hotkey_cancel: v
 
 
 # groups need a `hotkey` and either another `groups` or `phrases` attribute
@@ -16,9 +16,17 @@ groups:
         name: Care
         hotkey: c
 
+      - id: 2
+        name: Get_Back
+        hotkey: b
+
       - id: 5
         name: Help
         hotkey: h
+
+      - id: 16
+        name: Spread_out
+        hotkey: s
 
       - id: 54
         name: Affirmative
@@ -34,7 +42,7 @@ groups:
 
       - id: 57
         name: Current_Time
-        hotkey: t
+        hotkey: q
 
 
   - name:    Aggressive
@@ -126,11 +134,11 @@ groups:
     phrases:
       - id: 31
         name: Incoming
-        hotkey: i
+        hotkey: c
 
       - id: 32
-        name: Invis_enemy
-        hotkey: v
+        name: Hidden_Enemy
+        hotkey: h
 
       - id: 33
         name: Enemy_has_rune
@@ -141,12 +149,16 @@ groups:
         hotkey: d
 
 
-  - name:    Items
-    hotkey:  i
+  - name:    Items_Dinge
+    hotkey:  d
     phrases:
+      - id: 3
+        name: Need_Wards
+        hotkey: w
+
       - id: 39
         name: Buy_courier
-        hotkey: b
+        hotkey: c
 
       - id: 40
         name: Upgrade_courier
@@ -172,10 +184,6 @@ groups:
   - name:    GlobalStrategy
     hotkey:  g
     phrases:
-      - id: 3
-        name: Need_Wards
-        hotkey: w
-
       - id: 6
         name: Push
         hotkey: p
@@ -199,18 +207,6 @@ groups:
       - id: 59
         name: Smoke_gank
         hotkey: m
-
-
-  - name:    Defensive
-    hotkey:  d
-    phrases:
-      - id: 2
-        name: Get_Back
-        hotkey: b
-
-      - id: 16
-        name: Spread_out
-        hotkey: s
 
 
   - name:    Fluff
@@ -337,37 +333,6 @@ groups:
         hotkey: r
 
 
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
       
 
 
