Added possibility to print (basic) cheat sheet

--- a/layout.yaml
+++ b/layout.yaml
@@ -1,5 +1,5 @@
 # hotkey to start the vgs script
-hotkey_start: v
+hotkey: v
 # hotkey to cancel the vgs script/restore other controls at any time
 hotkey_cancel: v
 
