Updated default layout reference
* New chatwheel messages not yet integrated into default layout.

--- a/layout.yaml
+++ b/layout.yaml
@@ -434,4 +434,16 @@ groups:
 # chatwheel_say 68 "My bad"
 # chatwheel_say 69 "Regret"
 # chatwheel_say 70 "Relax"
+# chatwheel_say 73 "Good game"
+# chatwheel_say 74 "Good game, well played"
+# chatwheel_say 75 "(all) Good game"
+# chatwheel_say 76 "(all) Good game, well played"
+# chatwheel_say 77 "What should I buy?"
+# chatwheel_say 78 "I'm retreating"
+# chatwheel_say 79 "Space created"
+# chatwheel_say 80 "Whoops"
+# chatwheel_say 81 "Destroy the tower, then get back"
+# chatwheel_say 82 "Destroy the barracks, then get back"
+# chatwheel_say 83 "Ward top rune"
+# chatwheel_say 84 "Ward bottom rune"
 
